--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>fast.parse</groupId>
-    <artifactId>persistence</artifactId>
+    <artifactId>fast-parse</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>fast-parse</name>
     <description>简单的大数据文件解析入库脚本</description>
